--- a/just-cloud/docker-compose.yml
+++ b/just-cloud/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 services:
   just-mysql:
     build:
-      context: ./db
+      context: doc
     environment:
       MYSQL_ROOT_PASSWORD: root
     restart: always
