:sparkles: 新增sa认证方式

--- a/just-cloud/pom.xml
+++ b/just-cloud/pom.xml
@@ -104,6 +104,7 @@
 		<module>just-upms</module>
 		<module>just-common</module>
 		<module>just-visual</module>
+		<module>just-sa</module>
 	</modules>
 
 	<dependencyManagement>
