--- a/just-cloud/just-sa-oauth/pom.xml
+++ b/just-cloud/just-sa-oauth/pom.xml
@@ -43,6 +43,17 @@
 			<artifactId>spring-boot-starter-undertow</artifactId>
 		</dependency>
 
+		<!--mybatis 依赖-->
+		<dependency>
+			<groupId>com.cloud</groupId>
+			<artifactId>just-common-mybatis</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.cloud</groupId>
+			<artifactId>just-common-core</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 </project>
