--- a/just-cloud/pom.xml
+++ b/just-cloud/pom.xml
@@ -104,7 +104,7 @@
 		<module>just-upms</module>
 		<module>just-common</module>
 		<module>just-visual</module>
-		<module>just-sa</module>
+		<module>just-sa-oauth</module>
 	</modules>
 
 	<dependencyManagement>
