:sparkles: 新增sa认证方式

--- a/just-cloud/just-common/just-common-bom/pom.xml
+++ b/just-cloud/just-common/just-common-bom/pom.xml
@@ -65,6 +65,11 @@
 			</dependency>
 			<dependency>
 				<groupId>com.cloud</groupId>
+				<artifactId>just-common-sasecurity</artifactId>
+				<version>${just.common.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.cloud</groupId>
 				<artifactId>just-common-feign</artifactId>
 				<version>${just.common.version}</version>
 			</dependency>
