--- a/just-cloud/just-common/just-common-sasecurity/pom.xml
+++ b/just-cloud/just-common/just-common-sasecurity/pom.xml
@@ -2,21 +2,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>just-common</artifactId>
 		<groupId>com.cloud</groupId>
 		<version>3.3.3</version>
 	</parent>
-	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>just-sa-security</artifactId>
+	<artifactId>just-common-sasecurity</artifactId>
 	<packaging>jar</packaging>
 
 	<dependencies>
-		<!-- Sa-Token 权限认证（Reactor响应式集成）, 在线文档：http://sa-token.dev33.cn/ -->
+		<!-- Sa-Token 权限认证, 在线文档：http://sa-token.dev33.cn/ -->
 		<dependency>
 			<groupId>cn.dev33</groupId>
-			<artifactId>sa-token-reactor-spring-boot-starter</artifactId>
+			<artifactId>sa-token-spring-boot-starter</artifactId>
 			<version>1.27.0</version>
 		</dependency>
 		<!-- Sa-Token 整合 Redis (使用jackson序列化方式) -->
