--- a/just-cloud/just-common/pom.xml
+++ b/just-cloud/just-common/pom.xml
@@ -40,6 +40,6 @@
 		<module>just-common-feign</module>
 		<module>just-common-swagger</module>
 		<module>just-common-test</module>
-		<module>just-sa-security</module>
+		<module>just-common-sasecurity</module>
 	</modules>
 </project>
