--- a/just-cloud/just-sa-oauth/pom.xml
+++ b/just-cloud/just-sa-oauth/pom.xml
@@ -24,6 +24,17 @@
 			<artifactId>sa-token-oauth2</artifactId>
 			<version>1.27.0</version>
 		</dependency>
+		<!-- Sa-Token 整合 Redis （使用jackson序列化方式） -->
+		<dependency>
+			<groupId>cn.dev33</groupId>
+			<artifactId>sa-token-dao-redis-jackson</artifactId>
+			<version>1.27.0</version>
+		</dependency>
+		<!-- 提供Redis连接池 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-pool2</artifactId>
+		</dependency>
 
 
 		<!--注册中心客户端-->
