--- a/just-cloud/just-common/just-common-sasecurity/pom.xml
+++ b/just-cloud/just-common/just-common-sasecurity/pom.xml
@@ -24,6 +24,14 @@
 			<artifactId>sa-token-dao-redis-jackson</artifactId>
 			<version>1.27.0</version>
 		</dependency>
+
+		<!-- Sa-Token-OAuth2.0 模块 -->
+		<dependency>
+			<groupId>cn.dev33</groupId>
+			<artifactId>sa-token-oauth2</artifactId>
+			<version>1.27.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-pool2</artifactId>
