--- a/just-cloud/just-sa-oauth/src/main/resources/bootstrap.yml
+++ b/just-cloud/just-sa-oauth/src/main/resources/bootstrap.yml
@@ -7,7 +7,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: ${NACOS_HOST:just-sa}:${NACOS_PORT:8848}
+        server-addr: ${NACOS_HOST:just-sa-oauth}:${NACOS_PORT:8848}
       config:
         server-addr: ${spring.cloud.nacos.discovery.server-addr}
         file-extension: yml
@@ -16,13 +16,3 @@ spring:
   profiles:
     active: @profiles.active@
 
-# sa-token配置
-sa-token:
-  # token名称 (同时也是cookie名称)
-  token-name: satoken-server
-  # OAuth2.0 配置
-  oauth2:
-    is-code: true
-    is-implicit: true
-    is-password: true
-    is-client: true
