--- a/just-cloud/just-upms/just-upms-api/pom.xml
+++ b/just-cloud/just-upms/just-upms-api/pom.xml
@@ -41,5 +41,11 @@
 			<groupId>com.pig4cloud.excel</groupId>
 			<artifactId>excel-spring-boot-starter</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>cn.dev33</groupId>
+			<artifactId>sa-token-core</artifactId>
+			<version>1.27.0</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 </project>
