:zap: 登录权限认证完成

--- a/just-cloud/just-upms/just-upms-biz/pom.xml
+++ b/just-cloud/just-upms/just-upms-biz/pom.xml
@@ -52,6 +52,10 @@
 			<groupId>com.cloud</groupId>
 			<artifactId>just-common-swagger</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.cloud</groupId>
+			<artifactId>just-common-core</artifactId>
+		</dependency>
 		<!--mybatis 模块-->
 		<dependency>
 			<groupId>com.cloud</groupId>
