--- a/just-cloud/just-visual/just-monitor/pom.xml
+++ b/just-cloud/just-visual/just-monitor/pom.xml
@@ -62,7 +62,10 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<!--security-->
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
