--- a/just-cloud-ui/docker/pig-ui.conf
+++ b/just-cloud-ui/docker/pig-ui.conf
@@ -6,7 +6,7 @@ server {
     root /data/;
     
     # 注意维护新增微服务，gateway 路由前缀
-    location ~* ^/(code|auth|admin|gen) {
+    location ~* ^/(code|oauth2|admin|gen) {
        proxy_pass http://pig-gateway:9999;
        #proxy_set_header Host $http_host;
        proxy_connect_timeout 15s;
