--- a/just-cloud/just-common/just-common-core/pom.xml
+++ b/just-cloud/just-common/just-common-core/pom.xml
@@ -67,5 +67,10 @@
 			<groupId>io.swagger</groupId>
 			<artifactId>swagger-annotations</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>com.alibaba.cloud</groupId>
+			<artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+		</dependency>
 	</dependencies>
 </project>
