--- a/just-cloud/just-common/just-common-sasecurity/pom.xml
+++ b/just-cloud/just-common/just-common-sasecurity/pom.xml
@@ -41,11 +41,11 @@
 			<groupId>com.cloud</groupId>
 			<artifactId>just-common-core</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.aspectj</groupId>
-			<artifactId>aspectjrt</artifactId>
-		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
 
 	</dependencies>
 </project>
