--- a/just-cloud/just-upms/just-upms-api/pom.xml
+++ b/just-cloud/just-upms/just-upms-api/pom.xml
@@ -29,7 +29,7 @@
 		<!--断路器依赖-->
 		<dependency>
 			<groupId>com.cloud</groupId>
-			<artifactId>just-common-feign</artifactId>
+			<artifactId>just-common-sentinel</artifactId>
 		</dependency>
 		<!--mybatis 依赖-->
 		<dependency>
