--- a/just-cloud/just-common/pom.xml
+++ b/just-cloud/just-common/pom.xml
@@ -36,9 +36,9 @@
 		<module>just-common-job</module>
 		<module>just-common-log</module>
 		<module>just-common-mybatis</module>
-		<module>just-common-feign</module>
 		<module>just-common-swagger</module>
 		<module>just-common-test</module>
 		<module>just-common-sasecurity</module>
+		<module>just-common-sentinel</module>
 	</modules>
 </project>
