--- a/just-cloud/just-common/just-common-sentinel/pom.xml
+++ b/just-cloud/just-common/just-common-sentinel/pom.xml
@@ -3,12 +3,14 @@
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
-		<artifactId>just-common</artifactId>
 		<groupId>com.cloud</groupId>
+		<artifactId>just-common</artifactId>
 		<version>3.3.3</version>
 	</parent>
-	<modelVersion>4.0.0</modelVersion>
 
+	<modelVersion>4.0.0</modelVersion>
+	<packaging>jar</packaging>
+	<description>feign-sentinel服务降级熔断、限流组件</description>
 	<artifactId>just-common-sentinel</artifactId>
 
 	<dependencies>
@@ -17,16 +19,18 @@
 			<groupId>com.alibaba.cloud</groupId>
 			<artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>com.cloud</groupId>
+			<artifactId>just-common-core</artifactId>
+		</dependency>
+
 		<!--feign 依赖-->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>com.cloud</groupId>
-			<artifactId>just-common-core</artifactId>
-		</dependency>
 		<!-- okhttp 扩展 -->
 		<dependency>
 			<groupId>io.github.openfeign</groupId>
