:sparkles:  新增灰度代碼

--- a/just-cloud/just-common/just-common-bom/pom.xml
+++ b/just-cloud/just-common/just-common-bom/pom.xml
@@ -34,6 +34,11 @@
 		<dependencies>
 			<dependency>
 				<groupId>com.cloud</groupId>
+				<artifactId>just-common-gray</artifactId>
+				<version>${just.common.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.cloud</groupId>
 				<artifactId>just-common-core</artifactId>
 				<version>${just.common.version}</version>
 			</dependency>
