--- a/just-cloud/just-common/pom.xml
+++ b/just-cloud/just-common/pom.xml
@@ -40,5 +40,6 @@
 		<module>just-common-test</module>
 		<module>just-common-sasecurity</module>
 		<module>just-common-sentinel</module>
+		<module>just-common-gray</module>
 	</modules>
 </project>
