:sparkles:  网关接入灰度

--- a/just-cloud/just-upms/just-upms-biz/src/main/resources/bootstrap.yml
+++ b/just-cloud/just-upms/just-upms-biz/src/main/resources/bootstrap.yml
@@ -8,6 +8,9 @@ spring:
     nacos:
       discovery:
         server-addr: ${NACOS_HOST:just-register}:${NACOS_PORT:8848}
+        metadata:
+          version: gray
+          author: idslilang
       config:
         server-addr: ${spring.cloud.nacos.discovery.server-addr}
         file-extension: yml
