--- a/just-cloud/just-common/just-common-sentinel/pom.xml
+++ b/just-cloud/just-common/just-common-sentinel/pom.xml
@@ -41,5 +41,10 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-loadbalancer</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>com.alibaba.csp</groupId>
+			<artifactId>sentinel-datasource-nacos</artifactId>
+		</dependency>
 	</dependencies>
 </project>
