:sparkles:  全局日志记录

--- a/just-cloud/just-common/just-common-sentinel/pom.xml
+++ b/just-cloud/just-common/just-common-sentinel/pom.xml
@@ -46,5 +46,9 @@
 			<groupId>com.alibaba.csp</groupId>
 			<artifactId>sentinel-datasource-nacos</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.alibaba.csp</groupId>
+			<artifactId>sentinel-web-servlet</artifactId>
+		</dependency>
 	</dependencies>
 </project>
