--- a/just-cloud/just-gateway/pom.xml
+++ b/just-cloud/just-gateway/pom.xml
@@ -98,7 +98,10 @@
 			<groupId>com.cloud</groupId>
 			<artifactId>just-common-swagger</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>com.cloud</groupId>
+			<artifactId>just-common-log</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
