--- a/just-cloud/just-common/just-common-log/pom.xml
+++ b/just-cloud/just-common/just-common-log/pom.xml
@@ -44,11 +44,11 @@
 			<version>3.3.3</version>
 		</dependency>
 
-		<dependency>
-			<groupId>com.yomahub</groupId>
-			<artifactId>tlog-all-spring-boot-starter</artifactId>
-			<version>1.3.6</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.yomahub</groupId>-->
+<!--			<artifactId>tlog-all-spring-boot-starter</artifactId>-->
+<!--			<version>1.3.6</version>-->
+<!--		</dependency>-->
 
 	</dependencies>
 </project>
