--- a/just-cloud/just-common/just-common-bom/pom.xml
+++ b/just-cloud/just-common/just-common-bom/pom.xml
@@ -27,6 +27,7 @@
 		<rocksdbjni.version>5.18.3</rocksdbjni.version>
 		<nacos.version>2.0.3</nacos.version>
 		<excel.version>1.0.0</excel.version>
+		<t-log.version>1.3.6</t-log.version>
 	</properties>
 
 	<!-- 定义全局jar版本,模块使用需要再次引入但不用写版本号-->
@@ -138,6 +139,12 @@
 						<groupId>org.springframework.boot</groupId>
 					</exclusion>
 				</exclusions>
+			</dependency>
+
+			<dependency>
+				<groupId>com.yomahub</groupId>
+				<artifactId>tlog-all-spring-boot-starter</artifactId>
+				<version>${t-log.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
