--- a/just-cloud/just-common/just-common-bom/pom.xml
+++ b/just-cloud/just-common/just-common-bom/pom.xml
@@ -146,6 +146,16 @@
 				<artifactId>tlog-all-spring-boot-starter</artifactId>
 				<version>${t-log.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>com.yomahub</groupId>
+				<artifactId>tlog-gateway-spring-boot-starter</artifactId>
+				<version>${t-log.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.yomahub</groupId>
+				<artifactId>tlog-web-spring-boot-starter</artifactId>
+				<version>${t-log.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
