--- a/just-cloud/just-common/just-common-sasecurity/pom.xml
+++ b/just-cloud/just-common/just-common-sasecurity/pom.xml
@@ -47,5 +47,9 @@
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
 	</dependencies>
 </project>
