--- a/just-cloud/just-upms/pom.xml
+++ b/just-cloud/just-upms/pom.xml
@@ -32,5 +32,6 @@
 	<modules>
 		<module>just-upms-api</module>
 		<module>just-upms-biz</module>
+		<module>just-upms-minapp</module>
 	</modules>
 </project>
